[gd_scene load_steps=24 format=3 uid="uid://ddcgs2tlvqoby"]

[ext_resource type="Script" path="res://Scenes/Levels/shop.gd" id="1_00m1e"]
[ext_resource type="AudioStream" uid="uid://bduhgboer62r6" path="res://Art/Audio/8-Bit Wii Shop Channel Music.mp3" id="1_bvbbt"]
[ext_resource type="TileSet" uid="uid://b3n0bklwwny1b" path="res://Scenes/Levels/TileMap.tres" id="2_kovfc"]
[ext_resource type="AudioStream" uid="uid://cseuohao12amf" path="res://Art/Audio/BattleSceneSFX/Select.wav" id="3_2nyf7"]
[ext_resource type="AudioStream" uid="uid://cmj36t1kcgnrs" path="res://Art/Audio/BattleSceneSFX/AttackSFX.wav" id="4_oxx1b"]
[ext_resource type="AudioStream" uid="uid://climcpy7gbpcl" path="res://Art/Audio/BattleSceneSFX/Victory.wav" id="5_f48nv"]
[ext_resource type="AudioStream" uid="uid://qeidv7slohxa" path="res://Art/Audio/BattleSceneSFX/Defeat.wav" id="6_xlusd"]
[ext_resource type="AudioStream" uid="uid://bt0i24d1ltalk" path="res://Art/Audio/BattleSceneSFX/Dialogue.wav" id="7_otuec"]
[ext_resource type="Texture2D" uid="uid://63nyntdtstem" path="res://Art/Sprites/FBLAShirt.png" id="10_fh5pw"]
[ext_resource type="Texture2D" uid="uid://bgrl7i5n01dip" path="res://Art/Sprites/FBLALogo.png" id="10_om1na"]
[ext_resource type="Texture2D" uid="uid://bks7t470327lh" path="res://Art/Sprites/FBLAPants.png" id="11_r73dv"]
[ext_resource type="FontFile" uid="uid://ci60w53hdbiqe" path="res://Art/Fonts/m3x6.ttf" id="12_em7pg"]
[ext_resource type="Texture2D" uid="uid://cg05ngb01usg" path="res://Art/Sprites/FBLASnack.png" id="12_ic5nx"]
[ext_resource type="Texture2D" uid="uid://fo7q2nudj731" path="res://Art/Sprites/FBLASoda.png" id="13_nnoli"]
[ext_resource type="AudioStream" uid="uid://ryr0bp1sdpb7" path="res://Art/Audio/Effects/select.wav" id="14_vujho"]
[ext_resource type="AudioStream" uid="uid://dr6by74woslx" path="res://Art/Audio/Effects/success.ogg" id="15_1atdc"]

[sub_resource type="LabelSettings" id="LabelSettings_du2q8"]
font = ExtResource("12_em7pg")
font_size = 32

[sub_resource type="LabelSettings" id="LabelSettings_coqht"]
font = ExtResource("12_em7pg")
font_size = 60
font_color = Color(0, 1, 1, 0)

[sub_resource type="Animation" id="Animation_uynxh"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Shop/CanvasLayer/ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0, 0, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Shop/CanvasLayer/Notification:label_settings:font_size")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [60]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Shop/CanvasLayer/Notification:label_settings:font_color")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_su5ch"]
resource_name = "fade_in"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Shop/CanvasLayer/ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.1, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 1), Color(0, 0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_70hyu"]
resource_name = "fade_out"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Shop/CanvasLayer/ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 0), Color(0, 0, 0, 1)]
}

[sub_resource type="Animation" id="Animation_8pvh7"]
resource_name = "notification"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Shop/CanvasLayer/Notification:label_settings:font_size")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(),
"transitions": PackedFloat32Array(),
"update": 1,
"values": []
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Shop/CanvasLayer/Notification:label_settings:font_color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3, 1.4, 2),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Color(0, 1, 1, 0), Color(0, 1, 1, 1), Color(0, 1, 1, 1), Color(0, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_y5gh1"]
_data = {
"RESET": SubResource("Animation_uynxh"),
"fade_in": SubResource("Animation_su5ch"),
"fade_out": SubResource("Animation_70hyu"),
"notification": SubResource("Animation_8pvh7")
}

[node name="Shop" type="Node2D"]
script = ExtResource("1_00m1e")

[node name="Money" type="Label" parent="."]
offset_left = 11.0
offset_top = 3.0
offset_right = 150.0
offset_bottom = 47.0
text = "Money: 55"
label_settings = SubResource("LabelSettings_du2q8")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Music" type="Node" parent="."]

[node name="Normal" type="AudioStreamPlayer" parent="Music"]
stream = ExtResource("1_bvbbt")
volume_db = -12.842
autoplay = true

[node name="Scene" type="Node" parent="."]

[node name="TileMap" type="TileMap" parent="Scene"]
z_index = -2
texture_filter = 1
tile_set = ExtResource("2_kovfc")
format = 2
layer_0/name = "grass"
layer_0/tile_data = PackedInt32Array(0, 65553, 3, 65536, 65553, 3, 131072, 65553, 3, 131073, 65553, 3, 196609, 65553, 3, 65537, 65553, 3, 1, 65553, 3, 2, 65553, 3, 3, 65553, 3, 4, 65553, 3, 5, 65553, 3, 6, 65553, 3, 7, 65553, 3, 8, 65553, 3, 9, 65553, 3, 10, 65553, 3, 11, 65553, 3, 12, 65553, 3, 13, 65553, 3, 14, 65553, 3, 15, 65553, 3, 16, 65553, 3, 17, 65553, 3, 18, 65553, 3, 19, 65553, 3, 327689, 65553, 3, 393225, 65553, 3, 458761, 65553, 3, 524297, 65553, 3, 589833, 65553, 3, 655369, 65553, 3, 720905, 65553, 3, 327690, 65553, 3, 393226, 65553, 3, 458762, 65553, 3, 524298, 65553, 3, 589834, 65553, 3, 655370, 65553, 3, 720906, 65553, 3, 327691, 65553, 3, 393227, 65553, 3, 458763, 65553, 3, 524299, 65553, 3, 589835, 65553, 3, 655371, 65553, 3, 720907, 65553, 3, 327692, 65553, 3, 393228, 65553, 3, 458764, 65553, 3, 524300, 65553, 3, 589836, 65553, 3, 655372, 65553, 3, 720908, 65553, 3, 327693, 65553, 3, 393229, 65553, 3, 458765, 65553, 3, 524301, 65553, 3, 589837, 65553, 3, 655373, 65553, 3, 720909, 65553, 3, 327694, 65553, 3, 393230, 65553, 3, 458766, 65553, 3, 524302, 65553, 3, 589838, 65553, 3, 655374, 65553, 3, 720910, 65553, 3, 327695, 65553, 3, 393231, 65553, 3, 458767, 65553, 3, 524303, 65553, 3, 589839, 65553, 3, 655375, 65553, 3, 720911, 65553, 3, 327696, 65553, 3, 393232, 65553, 3, 458768, 65553, 3, 524304, 65553, 3, 589840, 65553, 3, 655376, 65553, 3, 720912, 65553, 3, 327697, 65553, 3, 393233, 65553, 3, 458769, 65553, 3, 524305, 65553, 3, 589841, 65553, 3, 655377, 65553, 3, 720913, 65553, 3, 327698, 65553, 3, 393234, 65553, 3, 458770, 65553, 3, 524306, 65553, 3, 589842, 65553, 3, 655378, 65553, 3, 720914, 65553, 3, 327699, 65553, 3, 393235, 65553, 3, 458771, 65553, 3, 524307, 65553, 3, 589843, 65553, 3, 655379, 65553, 3, 720915, 65553, 3, 327678, 65553, 3, 393214, 65553, 3, 458750, 65553, 3, 524286, 65553, 3, 589822, 65553, 3, 655358, 65553, 3, 720894, 65553, 3, 786430, 65553, 3, 851966, 65553, 3, 327679, 65553, 3, 393215, 65553, 3, 458751, 65553, 3, 524287, 65553, 3, 589823, 65553, 3, 655359, 65553, 3, 720895, 65553, 3, 786431, 65553, 3, 851967, 65553, 3, 262144, 65553, 3, 327680, 65553, 3, 393216, 65553, 3, 458752, 65553, 3, 524288, 65553, 3, 589824, 65553, 3, 655360, 65553, 3, 720896, 65553, 3, 786432, 65553, 3, 262145, 65553, 3, 327681, 65553, 3, 393217, 65553, 3, 458753, 65553, 3, 524289, 65553, 3, 589825, 65553, 3, 655361, 65553, 3, 720897, 65553, 3, 786433, 65553, 3, 262146, 65553, 3, 327682, 65553, 3, 393218, 65553, 3, 458754, 65553, 3, 524290, 65553, 3, 589826, 65553, 3, 655362, 65553, 3, 720898, 65553, 3, 786434, 65553, 3, 262147, 65553, 3, 327683, 65553, 3, 393219, 65553, 3, 458755, 65553, 3, 524291, 65553, 3, 589827, 65553, 3, 655363, 65553, 3, 720899, 65553, 3, 786435, 65553, 3, 262148, 65553, 3, 327684, 65553, 3, 393220, 65553, 3, 458756, 65553, 3, 524292, 65553, 3, 589828, 65553, 3, 655364, 65553, 3, 720900, 65553, 3, 786436, 65553, 3, 262149, 65553, 3, 327685, 65553, 3, 393221, 65553, 3, 458757, 65553, 3, 524293, 65553, 3, 589829, 65553, 3, 655365, 65553, 3, 720901, 65553, 3, 786437, 65553, 3, 262150, 65553, 3, 327686, 65553, 3, 393222, 65553, 3, 458758, 65553, 3, 524294, 65553, 3, 589830, 65553, 3, 655366, 65553, 3, 720902, 65553, 3, 786438, 65553, 3, 262151, 65553, 3, 327687, 65553, 3, 393223, 65553, 3, 458759, 65553, 3, 524295, 65553, 3, 589831, 65553, 3, 655367, 65553, 3, 720903, 65553, 3, 786439, 65553, 3, 262152, 65553, 3, 327688, 65553, 3, 393224, 65553, 3, 458760, 65553, 3, 524296, 65553, 3, 589832, 65553, 3, 655368, 65553, 3, 720904, 65553, 3, 786440, 65553, 3, 262153, 65553, 3, 786441, 65553, 3, 262154, 65553, 3, 786442, 65553, 3, 262155, 65553, 3, 786443, 65553, 3, 262156, 65553, 3, 786444, 65553, 3, 262157, 65553, 3, 786445, 65553, 3, 262158, 65553, 3, 786446, 65553, 3, 262159, 65553, 3, 786447, 65553, 3, 262160, 65553, 3, 786448, 65553, 3, 262161, 65553, 3, 786449, 65553, 3, 262162, 65553, 3, 786450, 65553, 3, 262163, 65553, 3, 786451, 65553, 3, -3, 65553, 3, 65533, 65553, 3, 131069, 65553, 3, 196605, 65553, 3, 262141, 65553, 3, 327677, 65553, 3, 393213, 65553, 3, 458749, 65553, 3, 524285, 65553, 3, 589821, 65553, 3, 655357, 65553, 3, 720893, 65553, 3, 786429, 65553, 3, 851965, 65553, 3, 917501, 65553, 3, -2, 65553, 3, 65534, 65553, 3, 131070, 65553, 3, 196606, 65553, 3, 262142, 65553, 3, 917502, 65553, 3, -1, 65553, 3, 65535, 65553, 3, 131071, 65553, 3, 196607, 65553, 3, 262143, 65553, 3, 917503, 65553, 3, -65536, 65553, 3, 196608, 65553, 3, 851968, 65553, 3, -65535, 65553, 3, 851969, 65553, 3, -65534, 65553, 3, 65538, 65553, 3, 131074, 65553, 3, 196610, 65553, 3, 851970, 65553, 3, -65533, 65553, 3, 65539, 65553, 3, 131075, 65553, 3, 196611, 65553, 3, 851971, 65553, 3, -65532, 65553, 3, 65540, 65553, 3, 131076, 65553, 3, 196612, 65553, 3, 851972, 65553, 3, -65531, 65553, 3, 65541, 65553, 3, 131077, 65553, 3, 196613, 65553, 3, 851973, 65553, 3, -65530, 65553, 3, 65542, 65553, 3, 131078, 65553, 3, 196614, 65553, 3, 851974, 65553, 3, -65529, 65553, 3, 65543, 65553, 3, 131079, 65553, 3, 196615, 65553, 3, 851975, 65553, 3, -65528, 65553, 3, 65544, 65553, 3, 131080, 65553, 3, 196616, 65553, 3, 851976, 65553, 3, -65527, 65553, 3, 65545, 65553, 3, 131081, 65553, 3, 196617, 65553, 3, 851977, 65553, 3, -65526, 65553, 3, 65546, 65553, 3, 131082, 65553, 3, 196618, 65553, 3, 851978, 65553, 3, -65525, 65553, 3, 65547, 65553, 3, 131083, 65553, 3, 196619, 65553, 3, 851979, 65553, 3, -65524, 65553, 3, 65548, 65553, 3, 131084, 65553, 3, 196620, 65553, 3, 851980, 65553, 3, -65523, 65553, 3, 65549, 65553, 3, 131085, 65553, 3, 196621, 65553, 3, 851981, 65553, 3, -65522, 65553, 3, 65550, 65553, 3, 131086, 65553, 3, 196622, 65553, 3, 851982, 65553, 3, -65521, 65553, 3, 65551, 65553, 3, 131087, 65553, 3, 196623, 65553, 3, 851983, 65553, 3, -65520, 65553, 3, 65552, 65553, 3, 131088, 65553, 3, 196624, 65553, 3, 851984, 65553, 3, -65519, 65553, 3, 65553, 65553, 3, 131089, 65553, 3, 196625, 65553, 3, 851985, 65553, 3, -65518, 65553, 3, 65554, 65553, 3, 131090, 65553, 3, 196626, 65553, 3, 851986, 65553, 3, -65517, 65553, 3, 65555, 65553, 3, 131091, 65553, 3, 196627, 65553, 3, 851987, 65553, 3, -65516, 65553, 3, 20, 65553, 3, 65556, 65553, 3, 131092, 65553, 3, 196628, 65553, 3, 262164, 65553, 3, 327700, 65553, 3, 393236, 65553, 3, 458772, 65553, 3, 524308, 65553, 3, 589844, 65553, 3, 655380, 65553, 3, 720916, 65553, 3, 786452, 65553, 3, 851988, 65553, 3, -65515, 65553, 3, 21, 65553, 3, 65557, 65553, 3, 131093, 65553, 3, 196629, 65553, 3, 262165, 65553, 3, 327701, 65553, 3, 393237, 65553, 3, 458773, 65553, 3, 524309, 65553, 3, 589845, 65553, 3, 655381, 65553, 3, 720917, 65553, 3, 786453, 65553, 3, 851989, 65553, 3, -65514, 65553, 3, 22, 65553, 3, 65558, 65553, 3, 131094, 65553, 3, 196630, 65553, 3, 262166, 65553, 3, 327702, 65553, 3, 393238, 65553, 3, 458774, 65553, 3, 524310, 65553, 3, 589846, 65553, 3, 655382, 65553, 3, 720918, 65553, 3, 786454, 65553, 3, 851990, 65553, 3)
layer_1/name = "stone"
layer_1/z_index = 1
layer_1/tile_data = PackedInt32Array()
layer_2/name = "props"
layer_2/z_index = 2
layer_2/tile_data = PackedInt32Array(720905, 327699, 2, 786441, 327699, 3, 720906, 327699, 2, 786442, 327699, 3, 589829, 19, 1, 589830, 65555, 1, 589838, 19, 1, 589839, 65555, 1, 524293, 262163, 5, 524294, 327699, 5, 524302, 262163, 5, 524303, 327699, 5, 393223, 19, 1, 393224, 65555, 1, 393228, 19, 1, 393229, 65555, 1, 327687, 262163, 5, 327688, 327699, 5, 327692, 262163, 5, 327693, 327699, 5)

[node name="Music" type="Node" parent="Scene/TileMap"]

[node name="ButtonClick" type="AudioStreamPlayer2D" parent="Scene/TileMap/Music"]
stream = ExtResource("3_2nyf7")

[node name="ButtonSelect" type="AudioStreamPlayer2D" parent="Scene/TileMap/Music"]
stream = ExtResource("3_2nyf7")

[node name="Attack" type="AudioStreamPlayer2D" parent="Scene/TileMap/Music"]
stream = ExtResource("4_oxx1b")

[node name="Victory" type="AudioStreamPlayer2D" parent="Scene/TileMap/Music"]
stream = ExtResource("5_f48nv")

[node name="Defeat" type="AudioStreamPlayer2D" parent="Scene/TileMap/Music"]
stream = ExtResource("6_xlusd")

[node name="Dialogue" type="AudioStreamPlayer2D" parent="Scene/TileMap/Music"]
stream = ExtResource("7_otuec")

[node name="ShirtLabel" type="Label" parent="."]
offset_left = 81.0
offset_top = 318.0
offset_right = 276.0
offset_bottom = 402.0
text = "FBLA SHIRT [100 coins]
unlocks move
PATHOS: EMOTION"
label_settings = SubResource("LabelSettings_du2q8")
horizontal_alignment = 1
vertical_alignment = 1

[node name="PantsLabel" type="Label" parent="."]
offset_left = 88.0
offset_top = 105.0
offset_right = 318.0
offset_bottom = 160.0
text = "FBLA PANTS [5 coins]
allows running from battle"
label_settings = SubResource("LabelSettings_du2q8")
horizontal_alignment = 1
vertical_alignment = 1

[node name="SnackLabel" type="Label" parent="."]
offset_left = 447.0
offset_top = 97.0
offset_right = 635.0
offset_bottom = 152.0
text = "FBLA SNACK [10 coins]
+1 level to all allies"
label_settings = SubResource("LabelSettings_du2q8")
horizontal_alignment = 1
vertical_alignment = 1

[node name="SodaLabel" type="Label" parent="."]
offset_left = 430.0
offset_top = 328.0
offset_right = 626.0
offset_bottom = 383.0
text = "FBLA SODA [35 coins]
+4 levels to all allies"
label_settings = SubResource("LabelSettings_du2q8")
horizontal_alignment = 1
vertical_alignment = 1

[node name="FblaLogo" type="Sprite2D" parent="."]
position = Vector2(342, 71)
scale = Vector2(0.26187, 0.226471)
texture = ExtResource("10_om1na")

[node name="Apple" type="Sprite2D" parent="."]
z_index = 1
position = Vector2(190, 286)
scale = Vector2(1.0625, 1.14062)
texture = ExtResource("10_fh5pw")

[node name="Banana" type="Sprite2D" parent="."]
z_index = 1
position = Vector2(257, 187)
scale = Vector2(1.125, 1.29688)
texture = ExtResource("11_r73dv")

[node name="Grape" type="Sprite2D" parent="."]
z_index = 1
position = Vector2(415, 187)
scale = Vector2(1.10937, 1.20312)
texture = ExtResource("12_ic5nx")

[node name="Orange" type="Sprite2D" parent="."]
z_index = 1
position = Vector2(478, 284)
scale = Vector2(1.10937, 1.10938)
texture = ExtResource("13_nnoli")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
offset_right = 654.0
offset_bottom = 403.0
color = Color(0, 0, 0, 0)
metadata/_edit_lock_ = true

[node name="Notification" type="Label" parent="CanvasLayer"]
offset_left = 232.0
offset_top = 115.0
offset_right = 424.0
offset_bottom = 163.0
text = "BOUGHT FRUIT!"
label_settings = SubResource("LabelSettings_coqht")

[node name="AppleBuy" type="Button" parent="CanvasLayer"]
z_index = 1
offset_left = 63.0
offset_top = 274.0
offset_right = 159.0
offset_bottom = 319.0
action_mode = 0
text = "BUY"

[node name="BananaBuy" type="Button" parent="CanvasLayer"]
z_index = 1
offset_left = 118.0
offset_top = 179.0
offset_right = 214.0
offset_bottom = 224.0
text = "BUY"

[node name="GrapeBuy" type="Button" parent="CanvasLayer"]
z_index = 1
offset_left = 462.0
offset_top = 154.0
offset_right = 558.0
offset_bottom = 199.0
text = "BUY"

[node name="OrangeBuy" type="Button" parent="CanvasLayer"]
z_index = 1
offset_left = 521.0
offset_top = 275.0
offset_right = 617.0
offset_bottom = 320.0
text = "BUY"

[node name="Leave" type="Button" parent="CanvasLayer"]
z_index = 1
offset_left = 292.0
offset_top = 365.0
offset_right = 348.0
offset_bottom = 396.0
text = "LEAVE"

[node name="Transition" type="AnimationPlayer" parent="."]
root_node = NodePath("../..")
libraries = {
"": SubResource("AnimationLibrary_y5gh1")
}

[node name="ButtonClick" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("14_vujho")

[node name="Success" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("15_1atdc")

[connection signal="pressed" from="CanvasLayer/AppleBuy" to="." method="_on_apple_buy_pressed"]
[connection signal="pressed" from="CanvasLayer/BananaBuy" to="." method="_on_banana_buy_pressed"]
[connection signal="pressed" from="CanvasLayer/GrapeBuy" to="." method="_on_grape_buy_pressed"]
[connection signal="pressed" from="CanvasLayer/OrangeBuy" to="." method="_on_orange_buy_pressed"]
[connection signal="pressed" from="CanvasLayer/Leave" to="." method="_on_leave_pressed"]
[connection signal="animation_finished" from="Transition" to="." method="_on_transition_animation_finished"]
